# termai

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  termai.py
termai_pkg/: __init__.py
