[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termai"
version = "1.0.0"
description = "A lightweight CLI wrapper for Google Gemini & OpenAI — built for Termux and Linux terminals."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests",
]
keywords = ["ai", "cli", "gemini", "openai", "terminal", "termux", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/estiaksoyeb/termai"
Repository = "https://github.com/estiaksoyeb/termai"
"Bug Tracker" = "https://github.com/estiaksoyeb/termai/issues"

[project.scripts]
ai = "termai_pkg:main"
termai = "termai_pkg:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["termai_pkg*"]
